# webfrp

./: Cargo.toml  README.md  config.toml  rustfmt.toml
client/: Cargo.toml
client/src/: lib.rs  main.rs
common/: Cargo.toml
common/src/: config.rs  connect.rs  lib.rs  message.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
webfrp/: Cargo.toml
webfrp/src/: lib.rs  main.rs
