[workspace]
members = ["client", "common", "server", "webfrp"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["deref"] }
toml = "0.8.19"
serde_json = "1.0.128"
async-channel = "2.3.1"
